--- a/main.html
+++ b/main.html
@@ -4,6 +4,11 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<ul>
+		<li class="breed1"><a href="https://en.wikipedia.org/wiki/Golden_Retriever"><img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="dog image" height=100px width=100px>
+		</a></li>
+		<li class="breed2"><a href="https://en.wikipedia.org/wiki/Poodle"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="dog image" height=100px width=100px>
+		</a></li></ul>
 </head>
 
 <body>
